# ai-novel-writer

./: .env.example  .gitignore  README.md  VERSION_1_1_SPEC.md  VERSION_1_2_SPEC.md  codebase-architecture-review.html  config.toml  enhanced_dependencies.py  enhanced_models.py  enhanced_story_agent.py  main.py  main_v12.py  pdf_formatter.py  pyproject.toml  requirements.txt  simple_agent_v1.py  simple_story_agent.py  test_story.json
.claude/agents/: agent-system-developer.md  character-development.md  cli-interface-developer.md  plot-structure-agent.md  pydantic-models-architect.md  scene-writer.md  story-concept.md  testing-framework-developer.md  workflow-orchestrator-dev.md
ai_docs/: claude-code-sub-agents.md  pydantic-ai-agents.md  pydantic-ai-dependencies.md  pydantic-ai-example-bank-support.md  pydantic-ai-example-flight-booking.md  pydantic-ai-example-weather-agent.md  pydantic-ai-examples.md  pydantic-ai-graph.md  pydantic-ai-message-history.md  pydantic-ai-models.md  pydantic-ai-multi-agent-applications.md  pydantic-ai-output.md  pydantic-ai-tools.md  short_story.md  writing_stages.md
docs/plans/: VERSION_1_4_IMPLEMENTATION_PLAN.md
docs/specs/: V1_1_IMPLEMENTATION_PLAN.md  VERSION_1_3_SPEC.md  VERSION_1_4_SPEC.md  VERSION_1_5_SPEC.md  VERSION_1_5_UPGRADE.md
examples/: main_complex.py
src/ai_story_writer/: __init__.py
src/ai_story_writer/agents/: __init__.py  agent_coordinator.py  base_agent.py  enhanced_dependencies.py  enhanced_story_agent.py  simple_story_agent.py  story_agent.py  v13_dependencies.py  v13_story_agent.py  v14_story_agent.py  (+1 more)
(+22 files in other folders)
