[project]
name = "ai-novel-writer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "click>=8.2.1",
    "httpx>=0.28.1",
    "openai>=1.100.2",
    "pydantic>=2.11.7",
    "pydantic-ai>=0.7.4",
    "python-dotenv>=1.1.1",
    "reportlab>=4.4.3",
]
